# Chess-C-

./: Bishop.cpp  Bishop.h  Black_Pawn.cpp  Black_Pawn.h  Board.cpp  Board.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Piece.cpp  Piece.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Square.h  White_Pawn.cpp  White_Pawn.h  main.cpp  readme.md
Chess_Project/: Chess_Project.sln  Chess_Project.vcxproj
conan/: profile
include/: Bishop.h  Board.h  FrontEnd.h  Piece.h  Queen.h  Rook.h  Square.h
src/: Bishop.cpp  Board.cpp  FrontEnd.cpp  King.cpp  Knight.cpp  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Rook.cpp  Square.cpp  main.cpp
